plugins {
    id 'java-library'
    id 'io.freefair.lombok'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

apply from: "${rootProject.projectDir}/gradle/jacoco.gradle"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    api project(':contentgrid-appserver-application-model')
    api project(':contentgrid-appserver-domain')

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'com.contentgrid.hateoas:contentgrid-hateoas-spring:0.0.3'

    annotationProcessor 'org.projectlombok:lombok'

    testImplementation project(':contentgrid-appserver-query-engine-api')
    testImplementation project(':contentgrid-appserver-app')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.hamcrest:hamcrest:3.0'
}

tasks.named('test') {
    useJUnitPlatform()
}